Actions
Bug #12156
closedlibsasl: 'prev' may be used uninitialized in this function
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../lib/common.c: In function '_is_sun_reg': ../lib/common.c:1317:15: error: 'prev' may be used uninitialized in this function [-Werror=maybe-uninitialized] 1317 | prev->next = r->next; | ~~~~~~~~~~~^~~~~~~~~ cc1: all warnings being treated as errors
Testing done: build/install/boot.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4e5ef1cee66fbfbbd2b3e56b81e2bb5700f4a59e
commit 4e5ef1cee66fbfbbd2b3e56b81e2bb5700f4a59e Author: Toomas Soome <tsoome@me.com> Date: 2020-01-09T07:15:13.000Z 12156 libsasl: 'prev' may be used uninitialized in this function Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions