12156 libsasl: 'prev' may be used uninitialized in this function Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>