usr/src/lib/libsasl/lib/common.c
@@ -1301,7 +1301,7 @@ static reg_list_t *reg_list_base = NULL;
 
 int _is_sun_reg(void *mech)
 {
-	reg_list_t *r, *prev;
+	reg_list_t *r, *prev = NULL;
 	int is_reg = 0;
 
 	LOCK_MUTEX(&reg_mutex);
